[gd_scene load_steps=11 format=2]

[ext_resource path="res://Images/Body/test.svg" type="Texture" id=1]
[ext_resource path="res://Images/Face/head.svg" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Images/UI/note.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Game/small.tres" type="DynamicFont" id=5]
[ext_resource path="res://Components/Attendee/Invitation.gd" type="Script" id=6]
[ext_resource path="res://Components/Attendee/Attendee.gd" type="Script" id=7]
[ext_resource path="res://Fonts/Game/xsmall.tres" type="DynamicFont" id=8]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 512, 512 )
margin_left = 278.858
margin_right = 61.8009
margin_top = 131.956
margin_bottom = 49.7422

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 75, 30 )

[node name="Attendee" type="Node2D"]
script = ExtResource( 7 )
full_name = "Filip"
face_texture = ExtResource( 2 )
body_texture = ExtResource( 1 )
np_hair_sprite = NodePath("Visual/HairSprite")
np_eyes_sprite = NodePath("Visual/EyesSprite")
np_face_sprite = NodePath("Visual/FaceSprite")
np_body_sprite = NodePath("Visual/BodySprite")
np_invitation_name_label = NodePath("Invitation/NotePanel/FullNameLabel")

[node name="Visual" type="Node2D" parent="."]
visible = false

[node name="HairSprite" type="Sprite" parent="Visual"]
texture = ExtResource( 3 )

[node name="EyesSprite" type="Sprite" parent="Visual"]
texture = ExtResource( 3 )

[node name="FaceSprite" type="Sprite" parent="Visual"]
texture = ExtResource( 3 )

[node name="BodySprite" type="Sprite" parent="Visual"]
texture = ExtResource( 3 )

[node name="Invitation" type="KinematicBody2D" parent="."]
collision_mask = 0
input_pickable = true
script = ExtResource( 6 )

[node name="NotePanel" type="Panel" parent="Invitation"]
margin_left = -75.0
margin_top = -30.0
margin_right = 75.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 75, 30 )
mouse_filter = 2
custom_styles/panel = SubResource( 5 )

[node name="FullNameLabel" type="Label" parent="Invitation/NotePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Nam"
align = 1
valign = 1

[node name="SeatLabel" type="Label" parent="Invitation/NotePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "not seated"
align = 1
valign = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Invitation"]
shape = SubResource( 4 )

[connection signal="drag" from="Invitation" to="." method="_on_Invitation_drag"]
[connection signal="input_event" from="Invitation" to="Invitation" method="_on_Invitation_input_event"]
[connection signal="select" from="Invitation" to="." method="_on_Invitation_select"]
